--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "reveal.js",
+  "name": "restitutions-breizhcamp2017",
   "version": "3.5.0",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
+  "description": "Restitutions BreizhCamp 2017",
+  "homepage": "https://jcrestel.github.io/restitutions-breizhcamp2017/",
   "main": "js/reveal.js",
   "scripts": {
     "start": "grunt serve",
     "build": "grunt"
   },
   "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "name": "Jérémy Crestel",
+    "web": "https://jcrestel.github.io"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/JCrestel/restitutions-breizhcamp2017.git"
   },
   "engines": {
     "node": ">=4.0.0"
